api/kubernetes-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tallerus-api
  namespace: tallerus
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
  selector:
    app: tallerus-api
